--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -11,11 +11,11 @@
         android:id="@+id/image"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="#aaa"
+        android:src="@android:drawable/ic_menu_gallery"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:contentDescription="@string/item_song_image_desc" />
     <TextView
         android:id="@+id/text1"
         android:layout_width="0dp"
